interpreter-janeklang/tests/bad/09_obscuredWrongType_2.janek
int main(){
    string s = "asd";
    int d = 2137;
    while(true){
        int s = 123;
    }
    s = d;
    return 0;
}